tests/spec/core_functions/color/change_color/error/mixed_formats.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/change_color/error/mixed_formats.hrx"

// Ignoring "blue_and_lightness", error tests are not supported yet.

// Ignoring "green_and_saturation", error tests are not supported yet.

// Ignoring "green_and_whiteness", error tests are not supported yet.

// Ignoring "lightness_and_whiteness", error tests are not supported yet.

// Ignoring "red_and_blackness", error tests are not supported yet.

// Ignoring "red_and_hue", error tests are not supported yet.

// Ignoring "saturation_and_blackness", error tests are not supported yet.
